Fixed bug #46246 (difference between call_user_func(array($this, $method)) and $this->$method())

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@267148 c90b9560-bf6c-de11-be94-00142212c4b1